# llm-proxy

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.yaml  index.html  llmproxy-mvp-design.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
app/: index.html  package-lock.json  package.json
app/src/: App.tsx  api.ts  conversationStore.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: anthropic_oauth.rs  codex_oauth.rs  copilot_auth.rs  databricks_oauth.rs  lib.rs  main.rs  mcp_servers.rs  oauth_store.rs
app/src/components/: AgentsTab.tsx  ChatTab.tsx  McpServersView.tsx  ProvidersTab.tsx  SettingsTab.tsx  UsageTab.tsx
apt/: index.html  pubkey.asc
apt/conf/: distributions
apt/db/: checksums.db  contents.cache.db  packages.db  references.db  release.caches.db
apt/dists/bookworm/: InRelease  Release  Release.gpg
apt/dists/bookworm/main/binary-amd64/: Packages  Release
apt/dists/bookworm/main/binary-arm64/: Packages  Release
apt/dists/jammy/: InRelease  Release  Release.gpg
apt/dists/jammy/main/binary-amd64/: Packages  Release
apt/dists/jammy/main/binary-arm64/: Packages  Release
apt/dists/noble/: InRelease  Release  Release.gpg
apt/dists/noble/main/binary-amd64/: Packages  Release
apt/dists/noble/main/binary-arm64/: Packages  Release
apt/dists/trixie/: InRelease  Release  Release.gpg
apt/dists/trixie/main/binary-amd64/: Packages  Release
apt/dists/trixie/main/binary-arm64/: Packages  Release
apt/pool/main/l/llmproxy-server/: llmproxy-server_0.1.0-1~bookworm_amd64.deb  llmproxy-server_0.1.0-1~bookworm_arm64.deb  llmproxy-server_0.1.0-1~jammy_amd64.deb  llmproxy-server_0.1.0-1~jammy_arm64.deb  llmproxy-server_0.1.0-1~noble_amd64.deb  llmproxy-server_0.1.0-1~noble_arm64.deb  llmproxy-server_0.1.0-1~trixie_amd64.deb  llmproxy-server_0.1.0-1~trixie_arm64.deb
crates/llmproxy-core/: Cargo.toml
crates/llmproxy-core/src/: error.rs  lib.rs  openai_types.rs  provider.rs
crates/llmproxy-providers/: Cargo.toml
crates/llmproxy-providers/src/: anthropic.rs  anthropic_oauth.rs  bedrock.rs  codex_oauth.rs  copilot.rs  databricks_oauth.rs  gemini.rs  lib.rs  passthrough.rs  util.rs
crates/llmproxy-server/: Cargo.toml
crates/llmproxy-server/src/: admin.rs  config.rs  cross_provider.rs  main.rs  oauth_tokens.rs  registry.rs  server.rs  usage_log.rs
packaging/apt/: README.md  distributions.template
packaging/brew/: README.md  llmproxy.rb.template
scripts/: build-dmg.sh  prepare-sidecar.sh  setup-gpg-secrets.sh
