[workspace]
members = [
    "crates/llmproxy-core",
    "crates/llmproxy-providers",
    "crates/llmproxy-server",
    "app/src-tauri",
]
resolver = "2"

[workspace.dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
reqwest     = { version = "0.12", features = ["json", "stream"] }
thiserror   = "1"
async-trait = "0.1"
tracing     = "0.1"
bytes       = "1"
futures     = "0.3"
uuid        = { version = "1", features = ["v4"] }
chrono      = { version = "0.4", features = ["serde"] }
