[package]
name    = "llmproxy-app"
version = "0.2.0"
edition = "2021"
description = "llmproxy desktop app"

[lib]
name = "llmproxy_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "llmproxy-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri   = { version = "2", features = ["tray-icon"] }
serde   = { version = "1", features = ["derive"] }
tokio   = { version = "1", features = ["process"] }
serde_json         = "1"
reqwest            = { version = "0.12", features = ["json"] }
