[package]
name        = "llmproxy-server"
version     = "0.1.0"
edition     = "2021"
description = "LLM proxy server with unified API for multiple providers"

[[bin]]
name = "llmproxy"
path = "src/main.rs"

[dependencies]
llmproxy-core      = { path = "../llmproxy-core" }
llmproxy-providers = { path = "../llmproxy-providers" }
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
futures     = { workspace = true }
bytes       = { workspace = true }
axum        = { version = "0.7", features = ["macros"] }
tower-http  = { version = "0.5", features = ["trace", "cors"] }
clap        = { version = "4", features = ["derive", "env"] }
dotenvy     = "0.15"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex       = "1"
anyhow      = "1"
dirs        = "5"
daemonize   = "0.5"
serde_yaml  = "0.9"
libc        = "0.2"
rusqlite    = { version = "0.31", features = ["bundled"] }
chrono      = { workspace = true }
uuid        = { workspace = true }
humantime   = "2"
reqwest     = { workspace = true }

[dev-dependencies]
serial_test = "3"
tempfile    = "3"
tower       = { version = "0.4", features = ["util"] }

[package.metadata.deb]
maintainer = "Tome Hirata <tomehirata@users.noreply.github.com>"
copyright = "2026, Tome Hirata <tomehirata@users.noreply.github.com>"
license-file = ["../../LICENSE", "0"]
extended-description = """\
llmproxy is a local proxy server that exposes a unified API for multiple \
LLM providers (OpenAI, Anthropic, Google, etc.), with usage logging, \
metrics, and request routing."""
section = "net"
priority = "optional"
assets = [
    ["target/release/llmproxy", "usr/bin/", "755"],
    ["../../config.example.yaml", "etc/llmproxy/config.yaml", "644"],
]
conf-files = ["/etc/llmproxy/config.yaml"]
